@@ -845,6 +845,7 @@ class TPageManager : public TAmxCommands
         void doPHE(int port, std::vector<int>& channels, std::vector<std::string>& pars);
         void doPHP(int port, std::vector<int>& channels, std::vector<std::string>& pars);
         void doPHT(int port, std::vector<int>& channels, std::vector<std::string>& pars);
+        void doPOP(int port, std::vector<int>& channels, std::vector<std::string>& pars);
         void doPPA(int port, std::vector<int>& channels, std::vector<std::string>& pars);
         void doPPF(int port, std::vector<int>& channels, std::vector<std::string>& pars);
         void doPPG(int port, std::vector<int>& channels, std::vector<std::string>& pars);
